--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
-    <style>
-      @import url("https://fonts.googleapis.com/css?family=Lato:var(--btn-11px-medium-font-weight),var(--title-11px-regular-font-weight),var(--title-12px-bold-font-weight),var(--title-12px-regular-font-weight),var(--h5-22px-bold-font-weight),var(--btn-14px-medium-font-weight),var(--title-16px-bold-font-weight),var(--title-12px-semibold-font-weight),var(--p-11px-regular-font-weight),400");
-    </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Arabic:wght@100;200;300;400;500;600;700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
     <link href="tailwind.css" rel="stylesheet" />
     <link href="tailwind.css" rel="stylesheet" />
   </head>
